--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HR Management Dashboard</title>
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>   
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/> 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     :root {
-      --primary-color: #4f46e5;   
+      --primary-color: #4f46e5; 
       --bg-light: #f9fafb;
       --text-dark: #111827;
       --card-bg: #ffffff;
       --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.1);
       --transition: all 0.3s ease-in-out;
     }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       font-family: 'Inter', sans-serif;
     }
+
     body {
       background-color: var(--bg-light);
       overflow-x: hidden;
     }
+
     /* Sidebar */
     .sidebar {
       position: fixed;
@@ -39,9 +42,10 @@
       background: white;
       padding: 20px;
       transition: var(--transition);
-      z-index: 1000;
+      z-index: 1001;
       box-shadow: 2px 0 10px rgba(0,0,0,0.1);
     }
+
     .logo {
       display: flex;
       align-items: center;
@@ -51,10 +55,12 @@
       color: var(--primary-color);
       margin-bottom: 30px;
     }
+
     .menu li {
       list-style: none;
       margin: 10px 0;
     }
+
     .menu a {
       display: flex;
       align-items: center;
@@ -65,28 +71,46 @@
       border-radius: 8px;
       transition: var(--transition);
     }
+
     .menu a:hover,
     .menu a.active {
       background: var(--primary-color);
       color: white;
       transform: translateX(5px);
     }
+
     .menu i {
       min-width: 24px;
       text-align: center;
     }
+
     /* Hamburger Menu */
     .hamburger {
       display: none;
       font-size: 1.5rem;
       cursor: pointer;
+      z-index: 1002;
     }
+
+    /* Overlay for mobile */
+    .overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: 1000;
+    }
+
     /* Main Content */
     .main-content {
       margin-left: 250px;
       padding: 20px;
       transition: var(--transition);
     }
+
     /* Navbar */
     .navbar {
       display: flex;
@@ -100,28 +124,33 @@
       top: 0;
       z-index: 999;
     }
+
     .search-bar input {
       padding: 8px 12px;
       border: 1px solid #ccc;
       border-radius: 6px;
       width: 200px;
     }
+
     .user-profile {
       display: flex;
       align-items: center;
       gap: 15px;
       position: relative;
     }
+
     .notifications i {
       cursor: pointer;
       font-size: 1.2rem;
     }
+
     .avatar-dropdown img {
       width: 36px;
       height: 36px;
       border-radius: 50%;
       cursor: pointer;
     }
+
     .dropdown-content {
       position: absolute;
       top: 40px;
@@ -134,15 +163,18 @@
       z-index: 999;
       min-width: 150px;
     }
+
     .dropdown-content a {
       display: block;
       padding: 10px 20px;
       text-decoration: none;
       color: #333;
     }
+
     .dropdown-content a:hover {
       background: #f3f4f6;
     }
+
     /* Page Sections */
     .page {
       display: none;
@@ -152,23 +184,28 @@
       box-shadow: var(--shadow-sm);
       margin-top: 20px;
     }
+
     .page.active {
       display: block;
     }
+
     h2 {
       font-size: 1.5rem;
       color: var(--text-dark);
     }
+
     label {
       display: block;
       margin: 10px 0 5px;
     }
+
     input, select, textarea {
       width: 100%;
       padding: 8px;
       border: 1px solid #ccc;
       border-radius: 6px;
     }
+
     button {
       margin-top: 15px;
       padding: 10px 20px;
@@ -178,34 +215,42 @@
       border-radius: 6px;
       cursor: pointer;
     }
+
     button:hover {
       background: #3730a3;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
     }
+
     th, td {
       padding: 12px;
       border-bottom: 1px solid #eee;
     }
+
     th {
       background: #f9fafb;
     }
+
     .badge {
       padding: 5px 10px;
       border-radius: 6px;
       font-size: 0.8rem;
     }
+
     .badge.active {
       background: #dcfce7;
       color: #16a34a;
     }
+
     .badge.inactive {
       background: #fee2e2;
       color: #dc2626;
     }
+
     footer {
       text-align: center;
       padding: 20px;
@@ -215,6 +260,7 @@
       box-shadow: 0 -1px 5px rgba(0,0,0,0.05);
       margin-top: 40px;
     }
+
     /* Dashboard Specific Styles */
     .summary-cards {
       display: grid;
@@ -222,6 +268,7 @@
       gap: 20px;
       margin-top: 20px;
     }
+
     .card {
       background: white;
       padding: 20px;
@@ -232,21 +279,26 @@
       gap: 15px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
     .card:hover {
       transform: scale(1.02);
       box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
+
     .card i {
       font-size: 28px;
       color: var(--primary-color);
     }
+
     .info .count {
       font-size: 1.5rem;
       font-weight: bold;
     }
+
     .info .label {
       color: #6b7280;
     }
+
     .chart-container {
       margin-top: 30px;
       background: white;
@@ -254,9 +306,11 @@
       border-radius: 10px;
       box-shadow: var(--shadow-sm);
     }
+
     canvas {
       max-height: 300px;
     }
+
     .activity-feed {
       margin-top: 30px;
       background: white;
@@ -264,6 +318,7 @@
       border-radius: 10px;
       box-shadow: var(--shadow-sm);
     }
+
     .activity-item {
       display: flex;
       align-items: center;
@@ -271,6 +326,7 @@
       padding: 10px 0;
       border-bottom: 1px solid #eee;
     }
+
     .employee-table {
       margin-top: 30px;
       background: white;
@@ -283,14 +339,21 @@
       .hamburger {
         display: block;
       }
+
       .sidebar {
         transform: translateX(-100%);
         transition: transform 0.3s ease;
         z-index: 1001;
       }
+
       .sidebar.active {
         transform: translateX(0);
       }
+
+      .overlay {
+        display: block;
+      }
+
       .main-content {
         margin-left: 0;
       }
@@ -298,6 +361,7 @@
   </style>
 </head>
 <body>
+
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <div class="logo">
@@ -315,6 +379,9 @@
     </ul>
   </div>
 
+  <!-- Overlay -->
+  <div class="overlay" id="overlay"></div>
+
   <!-- Main Content -->
   <div class="main-content">
     <!-- Navbar -->
@@ -323,7 +390,6 @@
       <div class="hamburger" id="hamburger">
         <i class="fas fa-bars"></i>
       </div>
-
       <div class="search-bar">
         <input type="text" placeholder="Search...">
       </div>
@@ -334,17 +400,12 @@
         <div class="avatar-dropdown">
           <img src="https://img.icons8.com/?size=60&id=98957&format=png" alt="User Avatar" id="avatar-trigger">
           <div class="dropdown-content" id="dropdownMenu">
-            <a href="#">Profile</a>  
+            <a href="#">Profile</a> 
             <a href="#">Logout</a>
           </div>
         </div>
       </div>
     </nav>
-
-
-
-
-
 
     <!-- Page Content -->
     <div id="content">
@@ -437,6 +498,7 @@
           </table>
         </div>
       </div>
+
       <!-- Add User -->
       <div class="page" id="add-user">
         <h2>Add New User</h2>
@@ -454,6 +516,7 @@
           <button type="submit">Save</button>
         </form>
       </div>
+
       <!-- Manage Employees -->
       <div class="page" id="manage-employees">
         <h2>Manage Employees</h2>
@@ -463,6 +526,7 @@
           <tr><td>Virat</td><td>Designer</td><td><span class="badge inactive">Inactive</span></td></tr>
         </table>
       </div>
+
       <!-- Departments -->
       <div class="page" id="departments">
         <h2>Departments</h2>
@@ -473,6 +537,7 @@
         <input type="text" id="newDeptInput" placeholder="New Department">
         <button onclick="addDepartment()">Add Department</button>
       </div>
+
       <!-- Attendance -->
       <div class="page" id="attendance">
         <h2>Attendance</h2>
@@ -481,6 +546,7 @@
         </table>
         <button onclick="markTestUserPresent()">Mark User Present Today</button>
       </div>
+
       <!-- Leave Requests -->
       <div class="page" id="leave-requests">
         <h2>Leave Requests</h2>
@@ -494,6 +560,7 @@
           <tr><th>Employee</th><th>From</th><th>To</th><th>Status</th></tr>
         </table>
       </div>
+
       <!-- Settings -->
       <div class="page" id="settings">
         <h2>Settings</h2>
@@ -511,133 +578,138 @@
         </form>
       </div>
     </div>
+
+    <footer>
+      © 2025 HR Management Dashboard. All rights reserved.
+    </footer>
   </div>
-       <div class="page active" id="dashboard">
-        <h2>Welcome to HR Dashboard</h2>
-        <p>Use the sidebar to navigate.</p>
-      </div>
-    </div>
-  </div>
-  <footer>
-    © 2025 HR Management Dashboard. All rights reserved.
-  </footer>
+
   <!-- JavaScript -->
- <script>
-  const links = document.querySelectorAll('.menu a');
-  const pages = document.querySelectorAll('.page');
-  const sidebar = document.getElementById('sidebar');
+  <script>
+    const links = document.querySelectorAll('.menu a');
+    const pages = document.querySelectorAll('.page');
+    const sidebar = document.getElementById('sidebar');
+    const hamburger = document.getElementById('hamburger');
+    const overlay = document.getElementById('overlay');
 
-  function showPage(pageId) {
-    links.forEach(link => link.classList.remove('active'));
-    pages.forEach(page => page.classList.remove('active'));
-    document.querySelector(`[data-page="${pageId}"]`).classList.add('active');
-    document.getElementById(pageId).classList.add('active');
-  }
+    function showPage(pageId) {
+      links.forEach(link => link.classList.remove('active'));
+      pages.forEach(page => page.classList.remove('active'));
+      document.querySelector(`[data-page="${pageId}"]`).classList.add('active');
+      document.getElementById(pageId).classList.add('active');
+    }
 
-  // Default load
-  showPage('dashboard');
+    // Default load
+    showPage('dashboard');
 
-  // Handle click
-  links.forEach(link => {
-    link.addEventListener('click', e => {
+    // Handle click navigation
+    links.forEach(link => {
+      link.addEventListener('click', e => {
+        e.preventDefault();
+        const page = link.getAttribute('data-page');
+        showPage(page);
+
+        // Close sidebar on mobile
+        if (window.innerWidth <= 768) {
+          sidebar.classList.remove('active');
+          overlay.style.display = 'none';
+        }
+      });
+    });
+
+    // Hamburger Toggle
+    if (hamburger) {
+      hamburger.addEventListener('click', () => {
+        sidebar.classList.toggle('active');
+        overlay.style.display = sidebar.classList.contains('active') ? 'block' : 'none';
+      });
+    }
+
+    // Click outside to close sidebar
+    overlay.addEventListener('click', () => {
+      sidebar.classList.remove('active');
+      overlay.style.display = 'none';
+    });
+
+    // Add User Form Submission
+    document.querySelector('#add-user form').addEventListener('submit', function () {
+      const name = this.querySelector('input[type="text"]').value;
+      const role = this.querySelector('select').value;
+      const table = document.querySelector('#manage-employees table');
+      const row = document.createElement('tr');
+      row.innerHTML = `<td>${name}</td><td>${role}</td><td><span class="badge active">Active</span></td>`;
+      table.appendChild(row);
+      this.reset();
+    });
+
+    // Add Department
+    function addDepartment() {
+      const deptInput = document.getElementById('newDeptInput');
+      if (deptInput.value.trim()) {
+        const li = document.createElement('li');
+        li.innerText = deptInput.value.trim();
+        document.getElementById('departmentList').appendChild(li);
+        deptInput.value = '';
+      }
+    }
+
+    // Mark Test User as Present
+    function markTestUserPresent() {
+      const today = new Date().toISOString().split('T')[0];
+      const row = document.createElement('tr');
+      row.innerHTML = `<td>${today}</td><td>Test User</td><td><span class="badge active">Present</span></td>`;
+      document.getElementById('attendanceTable').appendChild(row);
+    }
+
+    // Leave Request Form Submission
+    document.getElementById('leaveRequestForm').onsubmit = function(e) {
       e.preventDefault();
-      const page = link.getAttribute('data-page');
-      showPage(page);
+      const emp = this.querySelector('input[type="text"]').value;
+      const dates = this.querySelectorAll('input[type="date"]');
+      const from = dates[0].value;
+      const to = dates[1].value;
+      const row = document.createElement('tr');
+      row.innerHTML = `<td>${emp}</td><td>${from}</td><td>${to}</td><td><span class="badge inactive">Pending</span></td>`;
+      document.getElementById('leaveRequestsTable').appendChild(row);
+      this.reset();
+    };
 
-      // Close sidebar on mobile
-      if (window.innerWidth <= 768) {
-        sidebar.classList.remove('active');
-      }
-    });
-  });
-
-  // Hamburger Toggle
-  const hamburger = document.getElementById('hamburger');
-  if (hamburger) {
-    hamburger.addEventListener('click', () => {
-      sidebar.classList.toggle('active');
-    });
-  }
-
-  // Add User Form Submission
-  document.querySelector('#add-user form').addEventListener('submit', function () {  
-    const name = this.querySelector('input[type="text"]').value;
-    const role = this.querySelector('select').value;
-    const table = document.querySelector('#manage-employees table');
-    const row = document.createElement('tr');
-    row.innerHTML = `<td>${name}</td><td>${role}</td><td><span class="badge active">Active</span></td>`;
-    table.appendChild(row);
-    this.reset();
-  });
-
-  // Add Department
-  function addDepartment() {
-    const deptInput = document.getElementById('newDeptInput');
-    if (deptInput.value.trim()) {
-      const li = document.createElement('li');
-      li.innerText = deptInput.value.trim();
-      document.getElementById('departmentList').appendChild(li);
-      deptInput.value = '';
-    }
-  }
-
-  // Mark Test User as Present
-  function markTestUserPresent() {
-    const today = new Date().toISOString().split('T')[0];
-    const row = document.createElement('tr');
-    row.innerHTML = `<td>${today}</td><td>Test User</td><td><span class="badge active">Present</span></td>`;
-    document.getElementById('attendanceTable').appendChild(row);
-  }
-
-  // Leave Request Form Submission
-  document.getElementById('leaveRequestForm').onsubmit = function(e) {
-    e.preventDefault();
-    const emp = this.querySelector('input[type="text"]').value;
-    const dates = this.querySelectorAll('input[type="date"]');
-    const from = dates[0].value;
-    const to = dates[1].value;
-    const row = document.createElement('tr');
-    row.innerHTML = `<td>${emp}</td><td>${from}</td><td>${to}</td><td><span class="badge inactive">Pending</span></td>`;
-    document.getElementById('leaveRequestsTable').appendChild(row);
-    this.reset();
-  };
-
-  // Initialize Chart
-  const ctx = document.getElementById('performanceChart').getContext('2d');
-  new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
-      datasets: [
-        { label: 'Financial Team', data: [12, 19, 3, 5, 2, 3, 10], backgroundColor: '#4f46e5' },
-        { label: 'Marketing Team', data: [3, 5, 2, 3, 10, 2, 19], backgroundColor: '#10b981' }
-      ]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: { display: true },
-        tooltip: { enabled: true }
+    // Initialize Chart
+    const ctx = document.getElementById('performanceChart').getContext('2d');
+    new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+        datasets: [
+          { label: 'Financial Team', data: [12, 19, 3, 5, 2, 3, 10], backgroundColor: '#4f46e5' },
+          { label: 'Marketing Team', data: [3, 5, 2, 3, 10, 2, 19], backgroundColor: '#10b981' }
+        ]
       },
-      scales: {
-        y: { beginAtZero: true }
+      options: {
+        responsive: true,
+        plugins: {
+          legend: { display: true },
+          tooltip: { enabled: true }
+        },
+        scales: {
+          y: { beginAtZero: true }
+        }
       }
-    }
-  });
+    });
 
-  // Avatar Dropdown Toggle
-  document.getElementById('avatar-trigger').addEventListener('click', function () {
-    const dropdown = document.getElementById('dropdownMenu');
-    dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
-  });
+    // Avatar Dropdown Toggle
+    document.getElementById('avatar-trigger').addEventListener('click', function () {
+      const dropdown = document.getElementById('dropdownMenu');
+      dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
+    });
 
-  document.addEventListener('click', function (event) {
-    const avatar = document.getElementById('avatar-trigger');
-    const dropdown = document.getElementById('dropdownMenu');
-    if (!avatar.contains(event.target)) {
-      dropdown.style.display = 'none';
-    }
-  });
-</script>
+    document.addEventListener('click', function (event) {
+      const avatar = document.getElementById('avatar-trigger');
+      const dropdown = document.getElementById('dropdownMenu');
+      if (!avatar.contains(event.target)) {
+        dropdown.style.display = 'none';
+      }
+    });
+  </script>
 </body>
 </html>
