--- a/index.html
+++ b/index.html
@@ -481,15 +481,15 @@
                 <td><span class="badge active">Active</span></td>
               </tr>
               <tr>
-                <td>Rakesh</td>
-                <td>Rakesh</td>
+                <td>Jaya</td>
+                <td>Jaya</td>
                 <td>Recruiter</td>
                 <td>HR Department</td>
                 <td><span class="badge active">Active</span></td>
               </tr>
               <tr>
-                <td>Manikanta</td>
-                <td>Manikanta</td>
+                <td>Babu</td>
+                <td>Babu</td>
                 <td>Payroll Manager</td>
                 <td>Finance Department</td>
                 <td><span class="badge inactive">Inactive</span></td>
