--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
           </div>
           <div class="activity-item">
             <i class="fas fa-check-circle"></i>
-            <span>Leave request approved for Virat</span>
+            <span>Leave request approved for Jaya</span>
           </div>
         </div>
         <!-- Employee Table -->
@@ -523,7 +523,7 @@
         <table>
           <tr><th>Name</th><th>Role</th><th>Status</th></tr>
           <tr><td>kalyan</td><td>Developer</td><td><span class="badge active">Active</span></td></tr>
-          <tr><td>Virat</td><td>Designer</td><td><span class="badge inactive">Inactive</span></td></tr>
+          <tr><td>Jaya</td><td>Designer</td><td><span class="badge inactive">Inactive</span></td></tr>
         </table>
       </div>
 
